docs/6.0.0/index.md
---
layout: page
title: Documentation
menu: true
order: 5
image: 'https://qwtel.com/hydejack/assets/img/doc.jpg'
color: '#8e5c75'
redirect_from: /docs/latest/
---

Here you should be able to find everything you need to know to accomplish the most common tasks when blogging with Hydejack.
Should you think something is missing, [please let me know](https://github.com/qwtel/hydejack/issues).
Should you discover a mistake in the docs (or a bug in general) feel free to [open an issue](https://github.com/qwtel/hydejack/issues) on GitHub.

**NOTE**: While this manual tries to be beginner-friendly, as a user of Jekyll it is assumed that you are comfortable with editing multiple text files and running shell commands.
{:.message}

## Getting started
***

* [Installation]{:.heading data-flip="title"} -- How to install and run Hydejack.
* [Configuration]{:.heading data-flip="title"} -- Once Jekyll is running you can start with basic configuration.
* [Migration]{:.heading data-flip="title"} -- You can skip this if you are staring a new blog.
{:.related-posts.faded}

## Using Hydejack
***

* [Basics]{:.heading data-flip="title"} -- How to add different types of content.
* [Writing]{:.heading data-flip="title"} -- Producing markdown content for Hydejack.
* [Build]{:.heading data-flip="title"} -- How to build the static files for deployment.
* [Advanced]{:.heading data-flip="title"} -- Guides for more advanced tasks.
{:.related-posts.faded}

## Miscellaneous
***

* [Versions]{:.heading data-flip="title"} -- Version history of Hydejack.
* [Licenses]{:.heading data-flip="title"} -- Open Source license texts of libraries used by Hydejack.
{:.related-posts.faded}

[installation]: {{ site.baseurl }}{% link docs/6.0.0/installation.md %}
[configuration]: {{ site.baseurl }}{% link docs/6.0.0/configuration.md %}
[basics]: {{ site.baseurl }}{% link docs/6.0.0/basics.md %}
[writing]: {{ site.baseurl }}{% link docs/6.0.0/writing.md %}
[migration]: {{ site.baseurl }}{% link docs/6.0.0/migration.md %}
[build]: {{ site.baseurl }}{% link docs/6.0.0/build.md %}
[advanced]: {{ site.baseurl }}{% link docs/6.0.0/advanced.md %}
[versions]: {{ site.baseurl }}{% link docs/6.0.0/versions.md %}
[licenses]: {{ site.baseurl }}{% link docs/6.0.0/licenses.md %}
