docs/6.6.0/index.md
---
layout: page
title: Documentation
menu: true
order: 5
redirect_from:
  - /docs/latest/
  - /docs/
---

Here you should be able to find everything you need to know to accomplish the most common tasks when blogging with Hydejack.
Should you think something is missing, [please let me know](mailto:mail@qwtel.com).
Should you discover a mistake in the docs (or a bug in general) feel free to [open an issue](https://github.com/qwtel/hydejack/issues) on GitHub.

**NOTE**: While this manual tries to be beginner-friendly, as a user of Jekyll it is assumed that you are comfortable with editing multiple text files and running shell commands.
{:.message}

## Getting started
* [Installation]{:.heading data-flip="title"} -- How to install and run Hydejack.
* [Migration]{:.heading data-flip="title"} -- You can skip this if you haven't used Hydejack before.
* [Configuration]{:.heading data-flip="title"} -- Once Jekyll is running you can start with basic configuration.
{:.related-posts.faded}

## Using Hydejack
* [Basics]{:.heading data-flip="title"} -- How to add different types of content.
* [Writing]{:.heading data-flip="title"} -- Producing markdown content for Hydejack.
* [Scripts]{:.heading data-flip="title"} -- How to include 3rd party scripts on your site.
* [Build]{:.heading data-flip="title"} -- How to build the static files for deployment.
* [Advanced]{:.heading data-flip="title"} -- Guides for more advanced tasks.
{:.related-posts.faded}

## Other
* [LICENSE]{:.heading data-flip="title"} -- The license of this project.
* [NOTICE]{:.heading data-flip="title"} -- Parts of this program are provided under separate licenses.
* [CHANGELOG]{:.heading data-flip="title"} -- Version history of Hydejack.
{:.related-posts.faded}

[installation]: installation.md
[configuration]: configuration.md
[migration]: migration.md
[basics]: basics.md
[writing]: writing.md
[scripts]: scripts.md
[build]: build.md
[advanced]: advanced.md
[LICENSE]: ../../LICENSE.md
[NOTICE]: ../../NOTICE.md
[CHANGELOG]: ../../CHANGELOG.md
